# FreeCADConfig

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  install.py  install.sh  pyproject.toml
src/: ExportDrawingsIso5457Minimal.py  ExportSpreadsheet.py  ForceRecompute.py  PrintExternalGeometry.py  SearchAndReplaceCellContents.py  SearchAndReplaceLabels.py  SetViewObjectProjection.py  SetViewObjectViewport.py  ToggleConsoles.py  ZeroTransforms.py
src/config/: addons.toml  macros.toml  preferences.toml  shortcuts.toml
src/macros/: ExportDrawingsIso5457Minimal.py  ExportSpreadsheet.py  ForceRecompute.py  PrintExternalGeometry.py  QuickInspect.py  SearchAndReplaceCellContents.py  SearchAndReplaceLabels.py  SetViewObjectProjection.py  SetViewObjectViewport.py  ToggleConsoles.py  ZeroTransforms.py
